kubernetes/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-https-ingress
spec:
  tls:
  - hosts:
    - ecommerce.subrotosharma.site
    secretName: ecommerce-prod-tls
  rules:
  - host: ecommerce.subrotosharma.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecommerce-frontend
            port:
              number: 80
